--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: prepandhire-backend
     env: python
     plan: free
-    buildCommand: pip install -r backend/requirements.txt
-    startCommand: cd backend && python main.py
+    buildCommand: pip install -r backend/requirements-render.txt
+    startCommand: cd backend && python start_render.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
