--- a/vercel.json
+++ b/vercel.json
@@ -12,14 +12,14 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "https://prepandhire-backend.onrender.com/api/$1"
+      "dest": "https://prepandhirebackend.onrender.com/api/$1"
     },
     {
       "src": "/(.*)",
       "dest": "/frontend/build/$1"
     }
   ],
-  "buildCommand": "cd frontend && npm install && npm run build",
+  "buildCommand": "cd frontend && npm install && CI=false npm run build",
   "outputDirectory": "frontend/build",
   "installCommand": "cd frontend && npm install"
 }
