--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
   "buildCommand": "cd frontend && npm install && CI=false npm run build",
   "outputDirectory": "frontend/build",
   "installCommand": "cd frontend && npm install",
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "https://prepandhirebackend.onrender.com/api/$1"
+      "source": "/api/(.*)",
+      "destination": "https://prepandhirebackend.onrender.com/api/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
