Fix Pillow compatibility issue for Python 3.13

--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -13,8 +13,8 @@ groq==0.4.1
 httptools==0.6.1
 
 # Lightweight alternatives for heavy packages
-Pillow==10.1.0
-numpy==1.24.3
+Pillow>=10.2.0
+numpy>=1.26.0
 
 # Note: Whisper, PyTorch, and OpenCV removed for memory constraints
 # These features will be disabled in production
