--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -1,20 +1,18 @@
-# Lightweight requirements for Render free tier
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-websockets==12.0
-python-multipart==0.0.6
-python-dotenv==1.0.0
-python-socketio==5.10.0
-aiofiles==23.2.1
-pydantic==2.5.0
-httpx==0.27.2
-openai==1.35.10
-groq==0.4.1
-httptools==0.6.1
+# Ultra-lightweight requirements for Render free tier
+fastapi
+uvicorn[standard]
+websockets
+python-multipart
+python-dotenv
+python-socketio
+aiofiles
+httpx
+openai
+groq
 
-# Lightweight alternatives for heavy packages
-Pillow>=10.2.0
-numpy>=1.26.0
-
-# Note: Whisper, PyTorch, and OpenCV removed for memory constraints
+# Note: Removed heavy packages that cause build issues
+# - pydantic (causes Rust compilation issues)
+# - httptools (causes compilation issues) 
+# - Pillow (causes compilation issues)
+# - numpy (causes compilation issues)
 # These features will be disabled in production
